--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card card-solucao p-4 h-100 text-center">
                         <i class="fas fa-bullseye icon-destaque"></i>
-                        <h4 class="card-title fw-bold">Tráfego Pago: FLUXO CONTÍNUO</h4>
+                        <h4 class="card-title fw-bold">Tráfego Pago</h4>
                         <p class="card-text">Criamos a máquina de clientes para você. Sem "boosts", apenas estratégia de Meta Ads e Google Ads focada no seu ROI. <span class="fw-bold">Profissionalismo Ágil.</span></p>
                     </div>
                 </div>
