--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+h<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -210,7 +210,7 @@
                             <input type="telefone" class="form-control" name="Whatsapp" required>
                         </div>
                         <div class="mb-4">
-                            <label for="desafio" class="form-label fw-bold">Qual seu Principal Desafio (Ex: Começar a anunciar, Melhorar o ROI, Ter um logo profissional...)?</label>
+                            <label for="desafio" class="form-label fw-bold">Qual seu Principal Objetivo (Ex: Começar a anunciar, Melhorar meus anuncios, Gestão de Midias Sociais, Criação de Site...)?</label>
                             <input type="text" class="form-control" name="Desafio" required>
                         </div>
                         
